--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 
   <main>
     <section class="studies">
-      <h1 id="next" class="title--sections">Studies</h1>
+      <h1 id="next" class="title--sections first">Studies</h1>
       <div class="studies__containers">
         <div>
           <div>
@@ -176,10 +176,10 @@
 
         <div class="projects__container__card">
           <div class="card--image">
-            <img src="https://image.shutterstock.com/image-vector/img-file-document-icon-260nw-1356823577.jpg" alt="">
+            <img src="./Resources/Proyectos/Captura de pantalla 2021-06-22 230929.png" alt="">
           </div>
 
-          <a href="">
+          <a target="_blank" href="https://github.com/felipegallegoramirez/WorldLO">
             <div class="card--content">
               <div class="card--content__div">
                 <h3>WorldLO</h3>
@@ -199,10 +199,10 @@
 
         <div class="projects__container__card">
           <div class="card--image">
-            <img src="https://image.shutterstock.com/image-vector/img-file-document-icon-260nw-1356823577.jpg" alt="">
+            <img src="Resources/Proyectos/Captura de pantalla 2021-06-22 230628.png" alt="">
           </div>
 
-          <a href="">
+          <a  target="_blank" href="https://felipegallegoramirez.github.io/Frontend-Noob/">
             <div class="card--content">
               <div class="card--content__div">
                 <h3>Frontend Login</h3>
@@ -220,10 +220,10 @@
 
         <div class="projects__container__card">
           <div class="card--image">
-            <img src="https://image.shutterstock.com/image-vector/img-file-document-icon-260nw-1356823577.jpg" alt="">
+            <img src="Resources/Proyectos/Captura de pantalla 2021-06-22 230530.png" alt="">
           </div>
 
-          <a href="">
+          <a target="_blank" href="https://felipegallegoramirez.github.io/Google-Clon/">
             <div class="card--content">
               <div class="card--content__div">
                 <h3>Google clon</h3>
@@ -240,10 +240,10 @@
 
         <div class="projects__container__card">
           <div class="card--image">
-            <img src="https://image.shutterstock.com/image-vector/img-file-document-icon-260nw-1356823577.jpg" alt="">
+            <img src="/Resources/Proyectos/Kit2WDC.jpg" alt="">
           </div>
 
-          <a href="">
+          <a target="_blank" href="https://github.com/felipegallegoramirez/Carro-Bluetooth">
             <div class="card--content">
               <div class="card--content__div">
                 <h3>Car Bluetooth</h3>
