--- a/index.html
+++ b/index.html
@@ -57,19 +57,19 @@
 
     <div>
       <h3>Frontend</h3>
-      <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ad, aspernatur error ex sit molestiae quas obcaecati nostrum, deleniti eos et omnis porro totam eaque saepe laboriosam quaerat, id nesciunt. Incidunt.</p>
+      <p>Conocimientos basicos en javaScript, html y css ademas de utilizar diferentes frameworks como Angular, Materialize, Bootstrap, Express</p>
     </div>
     <div>
       <h3>Backend</h3>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia aspernatur reiciendis dolorem necessitatibus odit nam dicta, quod ullam aliquam repellat sequi facere amet quas beatae similique non dolorum quibusdam. Porro?</p>
+      <p>Centro especial de mi formacion, Conocimientos en MongoDB, sqlLite, sql, NodeJs Python, con futuro enfasis en Django .net docker e IA</p>
     </div>
     <div>
       <h3>Learn</h3>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam repudiandae est soluta aperiam sed pariatur voluptas laboriosam eaque et impedit ipsa, neque dicta, magni dolorem quidem modi explicabo harum libero.</p>
+      <p>Siempre estoy en constante aprendizaje utilizando diferentes herramientas lineales o no lineales, como cursos ofertados por platzi, gobierno, udemy o yt , ademas de utilizar la documentacion y StackOverflow</p>
     </div>
     <div>
       <h3>Desing</h3>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius expedita exercitationem harum, doloremque ipsa explicabo soluta vero a voluptatibus voluptate, veritatis illo architecto velit dolores cumque repudiandae reiciendis, voluptas sequi!</p>
+      <p> Conceptos de diseño web utilizando herramientas como Adobe XD , Adobe Illustrator, figma, notion. Ademas del uso de herramientas de video como obs, Adobe Premiere y Davinci Resolve</p>
     </div>
     <div>
       <h3>Others</h3>
@@ -77,7 +77,7 @@
     </div>
     <div>
       <h3>Adwards</h3>
-      <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Animi, magni dolorem deserunt dicta voluptatem atque aperiam. Autem qui laborum cupiditate necessitatibus nam omnis ipsum, ab commodi tempora doloribus fugiat veniam.</p>
+      <p>En constante participacion de concursos como retos de roboticas entre "Uvas", Concurso Nacional de programacion, DevsuCodeJam.</p>
     </div>
   </section>
 
