--- a/index.html
+++ b/index.html
@@ -51,7 +51,9 @@
         deleniti, expedita aperiam iusto quaerat modi ab quas dolorem sapiente
         eos cupiditate saepe vitae quia voluptatum iure obcaecati magni ut?
       </p>
-      <button class="button_top">Descargar cv</button>
+      <div class="button_top">
+      <a download="CV" href="resources/CV.pdf" >Descargar cv</a>
+    </div>
     </header>
 
     <main>
@@ -80,6 +82,7 @@
               <li id="estu3">Colegio</li>
               <li id="estu4">Logros</li>
             </ul>
+            
           </div>
           <div class="line"></div>
         </div>
