--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
       </div>
       <h1 class="name_top">Felipe Gallego R.</h1>
       <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam sint
-        deleniti, expedita aperiam iusto quaerat modi ab quas dolorem sapiente
-        eos cupiditate saepe vitae quia voluptatum iure obcaecati magni ut?
+        Change the world (?)
+        <br><br>
+        Un programador en formación con enfoque formativo en desarrollo de backend y desarrollo web. Con gran ambición por el futuro y constante aprendizaje.
       </p>
       <div class="button_top">
       <a download="CV" href="resources/CV.pdf" >Descargar cv</a>
@@ -92,30 +92,21 @@
         <h2>Fortalezas</h2>
         <div>
           <div>
-            <h3>Title</h3>
+            <h3>Blandas</h3>
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat
-              nemo natus iste, adipisci, fugiat earum odit culpa perferendis
-              labore aliquid quibusdam fugit. Id earum sapiente mollitia
-              repudiandae, deserunt architecto tempore?
+Persona bastante comprometida y motivada con lo que hago, ademas de constantemente trabajar en equipo.<br> Con facil adaptabilidad y en constante aprendizaje para un crecimiento continuo y consistente.
             </p>
           </div>
           <div>
-            <h3>Title</h3>
+            <h3>Conocimientos</h3>
             <p>
-              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Debitis
-              ducimus vero quia aut blanditiis adipisci omnis sapiente sunt
-              voluptatibus consequuntur vel odit fugiat laborum perspiciatis
-              dignissimos hic repudiandae, laboriosam ipsam?
+A lo largo de mi formacion he podido aprender lenguajes de frontend como angular, javaScript, TypeScript, lenguajes de tipado como css y html, Lenguajes multiplataforma como python, java y c++, y lenguajes de backend como Django y nodejs con bases de datos SQL y NOSQL.
             </p>
           </div>
           <div>
-            <h3>Title</h3>
+            <h3>Enfoque</h3>
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias,
-              quasi odio impedit nihil rem beatae explicabo autem doloremque
-              odit adipisci illo ullam, ratione sunt magnam cupiditate laborum
-              assumenda molestias tempora!
+              Enfocado principalmente en el desarrollo de backend en lo que refiere al uso de tecnologias y lenguajes como Django y Nodejs, ademas de estudio y motivacion con Datascience e inteligencia artificial.
             </p>
           </div>
         </div>
@@ -126,19 +117,17 @@
 
         <div class="proyect_card">
           <div class="proyect_card_imagen">
+<!--
             <img
               src="https://static.platzi.com/media/user_upload/angular-logo-png-a589f06a-12a5-45b0-821d-6b85d66c6d92.jpg"
               alt=""
-            />
+            />-->
           </div>
           <div class="proyect_card_text">
             <div class="proyect_card_text_div1">
-              <h3>Title Title</h3>
+              <h3>WorldLO</h3>
               <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Consectetur, libero voluptates asperiores distinctio voluptatum
-                sint eos nisi nihil sed officiis perferendis quidem consequuntur
-                sit maiores quam optio. Possimus, nihil dignissimos?
+                Desarrollo de una aplicación web educativa con diferentes herramientas para profesores y estudiantes como: La creación de exámenes, publicaciones, grupos públicos, chats y videollamadas.
               </p>
 
               <div class="techs">
@@ -157,30 +146,31 @@
                 <div>
                   <p>NodeJs</p>
                 </div>
+                <div>
+                  <p>Materialize</p>
+                </div>
               </div>
             </div>
 
             <div class="proyect_card_text_div2">
-              <p>Categoria</p>
+              <p>Full_Stack</p>
             </div>
           </div>
         </div>
 
         <div class="proyect_card">
           <div class="proyect_card_imagen">
+<!--
             <img
               src="https://static.platzi.com/media/user_upload/angular-logo-png-a589f06a-12a5-45b0-821d-6b85d66c6d92.jpg"
               alt=""
-            />
+            />-->
           </div>
           <div class="proyect_card_text">
             <div class="proyect_card_text_div1">
-              <h3>Title Title</h3>
+              <h3>Hogar Colombia</h3>
               <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Consectetur, libero voluptates asperiores distinctio voluptatum
-                sint eos nisi nihil sed officiis perferendis quidem consequuntur
-                sit maiores quam optio. Possimus, nihil dignissimos?
+                Desarrollo de una aplicación web para publicar ofertas inmobiliarias y gestión de las mismas.
               </p>
 
               <div class="techs">
@@ -203,26 +193,24 @@
             </div>
 
             <div class="proyect_card_text_div2">
-              <p>Categoria</p>
+              <p>Full_Stack</p>
             </div>
           </div>
         </div>
 
         <div class="proyect_card">
           <div class="proyect_card_imagen">
+<!--
             <img
               src="https://static.platzi.com/media/user_upload/angular-logo-png-a589f06a-12a5-45b0-821d-6b85d66c6d92.jpg"
               alt=""
-            />
+            />-->
           </div>
           <div class="proyect_card_text">
             <div class="proyect_card_text_div1">
-              <h3>Title Title</h3>
+              <h3>Anhel</h3>
               <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Consectetur, libero voluptates asperiores distinctio voluptatum
-                sint eos nisi nihil sed officiis perferendis quidem consequuntur
-                sit maiores quam optio. Possimus, nihil dignissimos?
+                Desarrollo de una aplicación web que mejore la salud mental mediante la prestación de servicios psicológicos Online de forma anónima si el usuario lo desea.
               </p>
 
               <div class="techs">
@@ -245,26 +233,24 @@
             </div>
 
             <div class="proyect_card_text_div2">
-              <p>Categoria</p>
+              <p>Full_Stack</p>
             </div>
           </div>
         </div>
 
         <div class="proyect_card">
           <div class="proyect_card_imagen">
+<!--
             <img
               src="https://static.platzi.com/media/user_upload/angular-logo-png-a589f06a-12a5-45b0-821d-6b85d66c6d92.jpg"
               alt=""
-            />
+            />-->
           </div>
           <div class="proyect_card_text">
             <div class="proyect_card_text_div1">
-              <h3>Title Title</h3>
+              <h3>AZ</h3>
               <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Consectetur, libero voluptates asperiores distinctio voluptatum
-                sint eos nisi nihil sed officiis perferendis quidem consequuntur
-                sit maiores quam optio. Possimus, nihil dignissimos?
+                Desarrollo de una aplicación para el manejo de datos e inventario en tiendas y organizaciones, ademas de tener diferentes herramientas para el mejoramiento de atención al cliente.
               </p>
 
               <div class="techs">
@@ -287,26 +273,24 @@
             </div>
 
             <div class="proyect_card_text_div2">
-              <p>Categoria</p>
+              <p>Full_Stack</p>
             </div>
           </div>
         </div>
 
         <div class="proyect_card">
           <div class="proyect_card_imagen">
+<!--
             <img
               src="https://static.platzi.com/media/user_upload/angular-logo-png-a589f06a-12a5-45b0-821d-6b85d66c6d92.jpg"
               alt=""
-            />
+            />-->
           </div>
           <div class="proyect_card_text">
             <div class="proyect_card_text_div1">
-              <h3>Title Title</h3>
+              <h3>Galeria Biblioteca</h3>
               <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Consectetur, libero voluptates asperiores distinctio voluptatum
-                sint eos nisi nihil sed officiis perferendis quidem consequuntur
-                sit maiores quam optio. Possimus, nihil dignissimos?
+          Proyecto para biblioteca local, el cual permite la publicacion de fotografias y datos de las categorias; Plantas, Insectos, Aves para el uso de la comunidad.
               </p>
 
               <div class="techs">
@@ -315,21 +299,18 @@
                 </div>
 
                 <div>
-                  <p>MongoDB</p>
+                  <p>FireBase</p>
                 </div>
 
                 <div>
                   <p>ExpressJs</p>
                 </div>
 
-                <div>
-                  <p>NodeJs</p>
-                </div>
               </div>
             </div>
 
             <div class="proyect_card_text_div2">
-              <p>Categoria</p>
+              <p>Full_Stack</p>
             </div>
           </div>
         </div>
