--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@ A lo largo de mi formacion he podido aprender lenguajes de frontend como angular
           </div>
           <div class="proyect_card_text">
             <div class="proyect_card_text_div1">
-              <h3>AZ</h3>
+              <h3>Fup</h3>
               <p>
                 Desarrollo de una aplicación para el manejo de datos e inventario en tiendas y organizaciones, ademas de tener diferentes herramientas para el mejoramiento de atención al cliente.
               </p>
@@ -304,6 +304,49 @@ A lo largo de mi formacion he podido aprender lenguajes de frontend como angular
 
                 <div>
                   <p>ExpressJs</p>
+                </div>
+
+              </div>
+            </div>
+
+            <div class="proyect_card_text_div2">
+              <p>Full_Stack</p>
+            </div>
+          </div>
+        </div>
+
+        <div class="proyect_card">
+          <div class="proyect_card_imagen">
+<!--
+            <img
+              src="https://static.platzi.com/media/user_upload/angular-logo-png-a589f06a-12a5-45b0-821d-6b85d66c6d92.jpg"
+              alt=""
+            />-->
+          </div>
+          <div class="proyect_card_text">
+            <div class="proyect_card_text_div1">
+              <h3>WatchAI</h3>
+              <p>
+          Proyecto con inteligencia artificial que permite al usuario subir un video y recibir recomendaciones en base al video
+              </p>
+
+              <div class="techs">
+                <div>
+                  <p>Angular</p>
+                </div>
+
+                <div>
+                  <p>PostgreSQL</p>
+                </div>
+
+                <div>
+                  <p>FastAPI</p>
+                </div>
+                <div>
+                  <p>ChatGPT</p>
+                </div>
+                <div>
+                  <p>Whisper</p>
                 </div>
 
               </div>
